--- a/template/index.html
+++ b/template/index.html
@@ -3,6 +3,8 @@
   <title>Raster</title>
   <script type="text/javascript" src="js/App.js"></script>
 </head>
-<body>
+<body style="background-color:0">
+
+
 </body>
 </html>
