Update with pixi (static image)

--- a/template/index.html
+++ b/template/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
   <title>Raster</title>
-  <script type="text/javascript" src="js/App.js"></script>
+  <script type="text/javascript" src="js/pixi.min.js"></script>
+  <script type="text/javascript" src="js/AppPixi.js"></script>
 </head>
-<body style="background-color:0">
+<body style="background-color:0;text-align:center;">
 
 
 </body>
